Made artist profile look better

--- a/artProfile.html
+++ b/artProfile.html
@@ -1,28 +1,37 @@
 <!DOCTYPE html>
-    <head>
-        <title>Street Talk</title>
-        <link rel="stylesheet" type="text/css" href="artProfile.css">
-    </head>
-    <body>
-      <h1>Your Profile</h1>
-      <div id="img">
-        <img id="profile" src="https://www.iconexperience.com/_img/g_collection_png/standard/512x512/businessman.png">
+<html>
+  <head>
+    <title>Street Talk</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="random.css">
+  </head>
+  <body>
+    <nav class="navbar">
+      <a class="navbar-brand" href="index.html">
+        <img src="StreetTalk_dynamic02.png" height="70" alt="" class="logo">
+      </a>
+    </nav>
+    <div class="content profile">
+      <div class="container">
+        <div class="notification">
+          <h3>Thank you for signing up for Street Talk!</h3>
+          <p>You will receive a weekly newsletter to connect with wall owners in your area.</p>
+        </div>
+        <h3><span class="name">Alex Qin</span></h3>
+        <p><img id="profile" src="http://alexq.in/images/blackwhite.jpg" class="img-thumbnail profile-photo"></p>
+        <p>Email:<span class="email"> a@alexq.in</span></p>
+        <p>Phone number:<span class="phoneNumber"> 6466787625</span></p>
+        <p>Location:<span class="location"> Greenpoint</span></p>
+        <p>Art style:<span class="style"> Futurism</span></p>
+        <p>Portfolio:<a href="url" class="portfolio"> Portfolio</a></p>
       </div>
-      <div id="uploaded">
-      <p>Link to your portfolio/website/social media:<a href= 'url' class="portfolio"> Portfolio link</a></p>
+    </div>
+    <div class="footer">
+      <div class="container">
+        <p>Made with ❤️ in Brooklyn by Marco Garcia Nueva</p>
+        <p>Contact me <a href="#">here</a></p>
       </div>
-      <div id="details">
-        <p>Your location:<span class="location"> Bushwick, Brooklyn</span><p>
-        <p>Username:<span class="email"> email@gmail.com</span></p><br>
-        <p>Contact Info:<br>
-        Name:<span class="name"> Ar Tist</span><br>
-        Phone #:<span class="phoneNumber"> (123)456-7890</span><br>
-        Email:<span class="email"> email@gmail.com</span>
-        </p>
-      </div>
-      <h1>Thank you for signing up!</h1>
-      <h1>You will get a weekly email about wall owners around you.</h1>
-      <h1>Thank you for taking part in this cause!</h1>
-      <script src="artProfile.js"></script>
-    </body>
+    </div>
+    <script src="artProfile.js"></script>
+  </body>
 </html>
