--- a/random.html
+++ b/random.html
@@ -3,8 +3,7 @@
   <head>
     <title>Street Talk</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="index.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="random.css">
   </head>
   <body>
     <nav class="navbar">
@@ -12,71 +11,27 @@
         <img src="StreetTalk_dynamic02.png" height="70" alt="" class="logo">
       </a>
     </nav>
-    <div class="content artist">
+    <div class="content profile">
       <div class="container">
-        <h1>I am a Wall Owner</h1>
-        <form class="artist-form">
-          <div class="form-group">
-            <label>Email address</label>
-            <input type="email" name="email" class="form-control email">
-          </div>
-          <div class="form-group">
-            <label>Password</label>
-            <input type="password" class="form-control">
-          </div>
-          <div class="form-group">
-            <label>First name</label>
-            <input type="text" name="firstName" class="form-control user-first-name">
-          </div>
-          <div class="form-group">
-            <label>Last name</label>
-            <input type="text" name="lastName" class="form-control user-last-name">
-          </div>
-          <div class="form-group">
-            <label>Phone number</label>
-            <input type="text" name="phoneNumber" class="form-control phoneNumber">
-          </div>
-          <div class="form-group">
-            <label>Location of Wall</label>
-            <input type="text" name="preferLocation" class="form-control location">
-          </div>
-
-          <label>Upload a photo of your wall</label>
-          <div class="input-group mb-3">
-            <div class="input-group-prepend">
-              <span class="input-group-text">Upload</span>
-            </div>
-            <div class="custom-file">
-              <input type="file" class="custom-file-input upload-image" id="inputGroupFile01">
-              <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
-            </div>
-          </div>
-        </form>
-        <div><img src="" class="image-preview" width="200px"></div>
-        <p>You will have to email documentation proving you own the wall</p>
-        <p>Any additional information?</p><textarea id="info" size="40"></textarea><br>
-        <p>As owner of the wall located on ______, I give consent to artists to paint on my wall and hereby release and hold harmless this organiztion from any and all liability in connection with damages or potential problems due to their work at ______. </p>
-        <div>
-          <form action="">
-            <input type="radio" name="option" value="agree"> I agree<br>
-            <input type="radio" name="option" value="disagree"> I disagree<br>
-          </form>
-        </div><br>
-
-        <button type="submit" class="btn btn-outline-light submit">Submit</button>
-            <p class="error"></p>
-        <p class="quote">"The greatness of a community is most accurately measured by the compassionate actions of its members"</p>
-        <p class="author">- Coretta Scott King</p>
-
-        <p class="notice">Please be aware that your information will be made public to people those who wish to contact you for purposes of this organiztion.</p>
+        <div class="notification">
+          <h3>Thank you for signing up for Street Talk!</h3>
+          <p>You will receive a weekly newsletter to connect with wall owners in your area.</p>
+        </div>
+        <h3><span class="name">Alex Qin</span></h3>
+        <p><img id="profile" src="http://alexq.in/images/blackwhite.jpg" class="img-thumbnail profile-photo"></p>
+        <p>Email:<span class="email"> a@alexq.in</span></p>
+        <p>Phone number:<span class="phoneNumber"> 6466787625</span></p>
+        <p>Location:<span class="location"> Greenpoint</span></p>
+        <p>Art style:<span class="style"> Futurism</span></p>
+        <p>Portfolio:<a href="url" class="portfolio"> Portfolio</a></p>
       </div>
     </div>
     <div class="footer">
       <div class="container">
         <p>Made with ❤️ in Brooklyn by Marco Garcia Nueva</p>
-        <p>Contact me <a href="about.html">here</a></p>
+        <p>Contact me <a href="#">here</a></p>
       </div>
     </div>
-    <script src="owner.js"></script>
+    <script src="artProfile.js"></script>
   </body>
 </html>
