--- a/random.html
+++ b/random.html
@@ -18,12 +18,10 @@
           <p>You will receive a weekly newsletter to connect with wall owners in your area.</p>
         </div>
         <h3><span class="name">Alex Qin</span></h3>
-        <p><img id="profile" src="http://alexq.in/images/blackwhite.jpg" class="img-thumbnail profile-photo"></p>
+        <p><img class="img-thumbnail profile-photo wallImg" src="http://alexq.in/images/blackwhite.jpg"></p>
         <p>Email:<span class="email"> a@alexq.in</span></p>
         <p>Phone number:<span class="phoneNumber"> 6466787625</span></p>
         <p>Location:<span class="location"> Greenpoint</span></p>
-        <p>Art style:<span class="style"> Futurism</span></p>
-        <p>Portfolio:<a href="url" class="portfolio"> Portfolio</a></p>
       </div>
     </div>
     <div class="footer">
@@ -32,6 +30,6 @@
         <p>Contact me <a href="#">here</a></p>
       </div>
     </div>
-    <script src="artProfile.js"></script>
+    <script src="ownProfile.js"></script>
   </body>
 </html>
