--- a/about.html
+++ b/about.html
@@ -1,26 +1,21 @@
 <!DOCTYPE html>
     <head>
         <title>Street Talk</title>
-        <link rel="stylesheet" type="text/css" href="about.css">
+        <link rel="stylesheet" type="text/css" href="index.css">
     </head>
     <body>
-      <h1>More About Us</h1>
-      <h2>Who we Are</h2>
-        <div id="iframe">
-          <iframe width="420" height="315"
-            src="url">
-          </iframe><br>
-        </div>
-        <p>(explanation goes here)</p>
-      <h2>Contact Us</h2>
-        <p>Phone Number: (123)456-7890</p>
-        <p>Email: app@art.com</p>
-        <p>Adress: 103 Art St, Brooklyn, NY</p>
-      <h2>Social Media</h2>
-        <div id="socials">
-        <a href="https://www.facebook.com/">facebook</a>
-        <a href="https://twitter.com/?lang=en">twitter</a>
-        <a href="https://www.instagram.com/?hl=en">instagram</a>
-        </div>
+      <div class="all">
+      <nav class="navbar">
+        <a class="navbar-brand" href="index.html">
+          <img src="StreetTalk_dynamic02.png" height="70" alt="" class="logo">
+        </a>
+      </nav>
+      <div class="info">
+      <h2>Contact Me</h2>
+        <p>Name: Marco Garcia Nueva</p>
+        <p>Phone Number: (646)319-2436</p>
+        <p>Email: mg27102@gmail.com</p>
+      </div>
+      </div>
     </body>
 </html>
