Linked to contact page

--- a/artProfile.html
+++ b/artProfile.html
@@ -29,7 +29,7 @@
     <div class="footer">
       <div class="container">
         <p>Made with ❤️ in Brooklyn by Marco Garcia Nueva</p>
-        <p>Contact me <a href="#">here</a></p>
+        <p>Contact me <a href="about.html">here</a></p>
       </div>
     </div>
     <script src="artProfile.js"></script>
