Fixed google sheets bug

--- a/owner.html
+++ b/owner.html
@@ -15,7 +15,7 @@
     <div class="content artist ownerColor">
       <div class="container">
         <h1>I am a Wall Owner</h1>
-        <form class="artist-form">
+        <form class="owner-form">
           <div class="form-group">
             <label>Email address</label>
             <input type="email" name="email" class="form-control email">
