--- a/about.html
+++ b/about.html
@@ -1,21 +1,29 @@
 <!DOCTYPE html>
-    <head>
-        <title>Street Talk</title>
-        <link rel="stylesheet" type="text/css" href="index.css">
-    </head>
-    <body>
-      <div class="all">
-      <nav class="navbar">
-        <a class="navbar-brand" href="index.html">
-          <img src="StreetTalk_dynamic02.png" height="70" alt="" class="logo">
-        </a>
-      </nav>
-      <div class="info">
-      <h2>Contact Me</h2>
-        <p>Name: Marco Garcia Nueva</p>
-        <p>Phone Number: (646)319-2436</p>
-        <p>Email: mg27102@gmail.com</p>
+<html>
+  <head>
+    <title>Street Talk</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="index.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  </head>
+  <body>
+    <nav class="navbar">
+      <a class="navbar-brand" href="index.html">
+        <img src="StreetTalk_dynamic02.png" height="70" alt="" class="logo">
+      </a>
+    </nav>
+    <div class="content info">
+      <div class="container">
+        <h2>Contact Me</h2>
+          <p>Name: Marco Garcia Nueva</p>
+          <p>Phone Number: (646)319-2436</p>
+          <p>Email: mg27102@gmail.com</p>
       </div>
+    </div>
+    <div class="footer">
+      <div class="container">
+        <p>Made with ❤️ in Brooklyn by Marco Garcia Nueva</p>
       </div>
-    </body>
+    </div>
+  </body>
 </html>
